# kafka-connect

./: .gitignore  Cargo.toml  README.md
connect/: Cargo.toml
connectors/cassandra/: Cargo.toml
connectors/dynamodb/: Cargo.toml
connectors/elasticsearch/: Cargo.toml
connectors/file/: Cargo.toml
connectors/http/: Cargo.toml
connectors/mysql/: Cargo.toml
connectors/postgres/: Cargo.toml
connectors/s3/: Cargo.toml
