[package]
name = "kafka-connect"
description = "API for building tools that scalably and reliably stream data between Apache Kafka and other systems"
version = "0.0.0"
authors = ["Blessan Abraham <blesson2k@gmail.com>"]
repository = "https://github.com/blessanabraham/kafka-connect"
edition = "2018"
license = "MIT"
keywords = ["kafka"]
categories = ["api-bindings"]
publish = true

[dependencies]
