[package]
name = "kafka-connect-cassandra"
version = "0.0.0"
description = "Kafka connector for Cassandra"
authors = ["Blessan Abraham <blesson2k@gmail.com>"]
repository = "https://github.com/blessanabraham/kafka-connect"
edition = "2018"
license = "MIT"
keywords = ["kafka", "cassandra"]
categories = ["api-bindings"]
publish = true

[dependencies]
