[package]
name = "kafka-connect-dynamodb"
description = "Kafka connector for DynamoDb"
version = "0.0.0"
authors = ["Blessan Abraham <blesson2k@gmail.com>"]
repository = "https://github.com/blessanabraham/kafka-connect"
edition = "2018"
keywords = ["kafka", "dynamodb"]
categories = ["api-bindings"]
license = "MIT"
publish = true

[dependencies]
