[package]
name = "kafka-connect-file"
version = "0.0.0"
description = "Kafka connector for file streams"
authors = ["Blessan Abraham <blesson2k@gmail.com>"]
repository = "https://github.com/blessanabraham/kafka-connect"
edition = "2018"
license = "MIT"
keywords = ["kafka", "filestream"]
categories = ["api-bindings"]
publish = true

[dependencies]
