[package]
name = "kafka-connect-mysql"
description = "Kafka connector for MySQL"
version = "0.0.0"
authors = ["Blessan Abraham <blesson2k@gmail.com>"]
repository = "https://github.com/blessanabraham/kafka-connect"
edition = "2018"
license = "MIT"
keywords = ["kafka", "cassandra"]
categories = ["api-bindings"]
publish = true

[dependencies]
