[package]
name = "kafka-connect-s3"
version = "0.0.0"
description = "Kafka connector for s3"
authors = ["Blessan Abraham <blesson2k@gmail.com>"]
repository = "https://github.com/blessanabraham/kafka-connect"
edition = "2018"
license = "MIT"
keywords = ["kafka", "s3"]
categories = ["api-bindings"]
publish = true

[dependencies]
